--- a/src/styles/components/_game-window.scss
+++ b/src/styles/components/_game-window.scss
@@ -1,24 +1,39 @@
 #game-map {
-    border: 3px solid black;
-    display: flex;
-    flex-wrap: wrap;
-    height: 450px;
-    margin: 20px;
-    width: 600px;
+  border: 3px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  height: 450px;
+  margin: 20px;
+  width: 600px;
 }
 
 .tile {
-    border: 2px solid gray;
-    height: 26px;
-    width: 26px;
+  border: 2px solid gray;
+  height: 26px;
+  width: 26px;
+}
+
+#minimap {
+  border: 2px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  height: 180px;
+  margin: 20px;
+  width: 300px;
+}
+
+.minimap-tile {
+  height: 3px;
+  width: 3px;
 }
 
 .selected {
-    border: 1px solid lightGreen;
-    height: 28px;
-    width: 28px;
+  border: 1px solid lightGreen;
+  height: 28px;
+  width: 28px;
 }
 
 .empty-tile { background: gray; }
 .grunt-tile { background: blue; }
 .tree-tile { background: green; }
+.gold-tile { background: gold; }
